prevent issue where horizontal scrollbar appears in firefox when viewport is narrower than body max-width (caused by box-shadow)

--- a/web-app/css/main.css
+++ b/web-app/css/main.css
@@ -30,6 +30,7 @@ body {
 	font-family: "Segoe UI",Tahoma,Helvetica,"Helvetica Neue",Arial,sans-serif;
 	margin: 0 auto;
 	max-width: 1140px;
+	overflow-x: hidden; /* prevents box-shadow causing a horizontal scrollbar in firefox when viewport < 1140px wide */
     -moz-box-shadow: 0 0 0.5em #255b17;
  -webkit-box-shadow: 0 0 0.5em #255b17;
          box-shadow: 0 0 0.5em #255b17;
